--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ section img#mountains_front
 {
     position: absolute;
     padding: 100px;
-    color: #1c0522;
+    background-color: #1c0522;
 }
 .sec h2 
 {
